# Rehearse

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
apps/agent/: .env.example  README.md  agent.py  requirements.txt
apps/web/: .env.local.example  next.config.mjs  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: VoiceInterview.tsx
apps/web/lib/: api.ts
docs/: DEPLOYMENT.md
eval/: __init__.py  agreement.py  baseline.json  check_regression.py  freeze_baseline.py  generate.py  golden.py  judge_prompt.md  label.py  metrics.py  rubric.yaml  run_eval.py  runner.py  schemas.py  smoke.py
eval/golden/: judgements.jsonl  labeled.jsonl  schema.md  seed.jsonl  unlabeled.jsonl
ingestion/: __init__.py  cli.py  extract.py  sample_jd.txt  schemas.py
rehearse_core/: __init__.py  config.py
rehearse_core/llm/: __init__.py  base.py  claude.py  factory.py  fake.py  groq.py
services/: __init__.py
services/api/: __init__.py  db.py  deps.py  main.py  models.py  schemas.py
tests/: test_api.py  test_check_regression.py  test_config.py  test_db.py  test_factory.py  test_generate.py  test_golden.py  test_ingestion.py  test_label.py  test_metrics.py  test_run_eval.py  test_runner.py  test_schemas.py
