[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rehearse"
version = "0.1.0"
description = "Rehearse — an AI voice interview coach with a calibrated LLM-as-judge evaluation harness."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "groq>=0.11",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml>=6.0",
    "httpx>=0.27",
]

[tool.setuptools]
packages = ["rehearse_core", "rehearse_core.llm", "eval", "ingestion", "services", "services.api"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends()/Query() are meant to be used as argument defaults.
extend-immutable-calls = ["fastapi.Depends"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
